complete UI/UX,theme redesign